# DAVIDE-Benckmark

./: .gitignore  README.md  env.yml  pyproject.toml
LICENSE/: LICENSE_KAIR  LICENSE_Restormer.md  LICENSE_TLC  README.md
basicsr/: demo.py  test.py  train.py
basicsr/data/: __init__.py  data_sampler.py  davide_dataset.py  prefetch_dataloader.py  transforms.py
basicsr/metrics/: __init__.py  fid.py  metric_util.py  niqe.py  psnr_ssim.py
basicsr/models/: __init__.py  base_model.py  davide_model.py  edvr_model.py  lr_scheduler.py  video_model.py  vrt_model.py
basicsr/models/archs/: __init__.py  arch_utils.py  dgn_arch.py  edvr_arch.py  rvrt_arch.py  shiftnet_arch.py  tlc_utils.py  vrt_arch.py
basicsr/models/losses/: __init__.py  loss_util.py  losses.py  vgg_arch.py
basicsr/utils/: __init__.py  dist_util.py  download_util.py  file_client.py  flow_util.py  img_util.py  lmdb_util.py  logger.py  matlab_functions.py  misc.py  options.py  video_util.py
dataset/: download_davide_dataset.sh  download_demo_data.sh  readme.md
dataset/annotations/: test_avg_conf_depth.csv  test_env_motion.csv  test_proximity.csv
dataset/meta_info/: meta_info_DAVIDE_test.txt  meta_info_DAVIDE_train.txt  meta_info_DAVIDE_val_partition.txt
model_zoo/: download_davide_checkpoints.sh
options/demo/: demo_notes.md
scripts/data_preparation/: average_conf.py  create_lmdb.py  generate_meta_info.py  proximity_annotation.py
scripts/reports/: E0_arch_ablation.py  E0_depth_quality.py  E1_depth_impact.py  E1_depth_impact_attributes.py  E1_depth_impact_confidence.py  E2_sota_comparison.py
(+184 files in other folders)
